--- a/src/Stewart.Client/Stewart.Client.csproj
+++ b/src/Stewart.Client/Stewart.Client.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.3" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="7.0.13" />
+    <PackageReference Include="Soda.Http" Version="1.0.7" />
   </ItemGroup>
 
   <ItemGroup>
